// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container allows additional classes to be passed through 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 0;
  padding-right: 0;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0 test-class"
  />
</div>
`;

exports[`Container allows padding to be passed through 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0 test-class"
  />
</div>
`;

exports[`Container has a container class by default and NO fixed class 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 0;
  padding-right: 0;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Container renders children 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 0;
  padding-right: 0;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="child-content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Container renders correctly without props 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 0;
  padding-right: 0;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  />
</div>
`;
